--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "serverless-http": "^3.2.0",
+    "serverless-offline": "^12.0.4",
+    "serverless-plugin-typescript": "^2.1.4"
   }
 }
