--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "airtable": "^0.11.6",
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   },
   "devDependencies": {
