--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "nodemon": "^2.0.22",
-    "serverless-http": "^3.2.0",
-    "serverless-offline": "^12.0.4",
-    "serverless-plugin-typescript": "^2.1.4"
+    "nodemon": "^2.0.22"
   }
 }
