--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,3 @@
-# Compiled JavaScript files
-lib/**/*.js
-lib/**/*.js.map
-
 # TypeScript v1 declaration files
 typings/
 
@@ -11,3 +7,5 @@ node_modules/
 .serverless
 
 .env
+
+dist/**
