--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "outDir": "lib",
     "sourceMap": true,
-    "strict": true,
-    "target": "es2017"
+    "outDir": "dist",
+    "target": "es6",
+    "esModuleInterop": true
   },
   "compileOnSave": true,
   "include": ["src"]
