--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "kpz-node-express-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,10 +16,17 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": "14.20.0"
+  },
+  "compilerOptions": {
+    "esModuleInterop": true
   }
 }
