--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "airtable": "^0.11.6",
     "axios": "^1.3.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
@@ -20,6 +21,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22"
   },
