--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/nunito": "^4.5.12",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/joy": "^5.0.0-alpha.73",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
