--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc -p ."
+    "dev": "npx tsc --watch & nodemon --exec ts-node src/index.ts",
+    "build": "tsc -p .",
+    "fetch-kita-data": "ts-node scripts/fetchKitasData.ts",
+    "print-kita-names": "ts-node ./iterateOverKits.ts"
   },
   "author": "",
   "license": "ISC",
@@ -16,14 +18,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "ts-node": "^10.9.1",
     "typescript": "^5.0.3",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "nodemon": "^2.0.22"
+    "@types/node": "^18.15.11",
+    "chalk": "^5.2.0",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   },
   "engines": {
     "node": "14.20.0"
