--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "target": "es6",
+    "resolveJsonModule": true,
     "esModuleInterop": true
   },
   "compileOnSave": true,
