--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "haversine-distance": "^1.2.1",
     "nodemon": "^2.0.22"
   },
   "engines": {
