--- a/backend/package.json
+++ b/backend/package.json
@@ -19,16 +19,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.3",
     "typescript": "^5.0.3",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "haversine-distance": "^1.2.1",
-    "nodemon": "^2.0.22",
     "@types/node": "^18.15.11",
     "chalk": "^5.2.0",
+    "haversine-distance": "^1.2.1",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
   "engines": {
