--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc -p ."
+    "dev": "node dist/index.js",
+    "build": "tsc -p .",
+    "build-docker": "docker build . -t express-typescript-docker",
+    "run-docker": "docker run -p 3000:3000 -d express-typescript-docker:latest"
   },
   "author": "",
   "license": "ISC",
