--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,10 @@
     "dev": "node dist/index.js",
     "build": "tsc -p .",
     "build-docker": "docker build . -t express-typescript-docker",
-    "run-docker": "docker run -p 3000:3000 -d express-typescript-docker:latest"
+    "run-docker": "docker run -p 3000:3000 -d express-typescript-docker:latest",
+    "up-dev": "docker-compose up -d",
+    "up-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
+    "down": "docker-compose down"
   },
   "author": "",
   "license": "ISC",
