Changed Ports for Dev & Prod Docker container

--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -7,4 +7,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.prod
+    expose:
+      - '3001'
+    ports:
+      - '3001:3000'
     command: node dist/index.js
