--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "local": "npx tsc --watch & nodemon dist/index.js",
     "dev": "node dist/index.js",
     "build": "tsc -p .",
-    "fetch-kita-details": "ts-node src/scripts/iterateOverKitas.ts"
+    "fetch-kita-details": "ts-node src/scripts/iterateOverKitas.ts",
     "docker-dev": "docker-compose up -d",
     "docker-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
     "docker-down": "docker-compose down"
