--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -1,12 +1,10 @@
 version: '3'
 
 services:
-  ts-node-docker:
+  express-typescript-docker-prod:
+    image: goodbuy/kpz:prod
     environment:
       - NODE_ENV=production
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
     expose:
       - '3001'
     ports:
