--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,12 +1,10 @@
 version: '3'
 
 services:
-  express-typescript-docker:
+  express-typescript-docker-dev:
+    image: goodbuy/kpz:dev
     environment:
       - NODE_ENV=development
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
     volumes:
       - ./:/usr/src/app
     container_name: express-typescript-docker
