--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build Docker Image Dev
-      run: docker build -f Dockerfile.dev -t goodbuy/kpz:dev .
+      run: docker build -f backend/Dockerfile.dev -t goodbuy/kpz:dev .
       
     - name: Build Docker Image Prod
-      run: docker build -f Dockerfile.prod -t goodbuy/kpz:prod .
+      run: docker build -f backend/Dockerfile.prod -t goodbuy/kpz:prod .
 
     - name: Push Docker Image
       run: |
