--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,13 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
-          git pull
+          if [ ! -d "kpz" ]; then
+            git clone git@github.com:KitaPlatzZentrale/kpz.git
+            cd kpz
+          else
+            cd kpz
+            git pull
+          fi
           docker-compose down
           docker-compose up -d
           docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d          
