--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
+    - name: Clone or Pull KPZ Repo
+      uses: appleboy/ssh-action@master
+      with:
+        host: 3.70.176.52
+        username: ${{ secrets.SSH_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        script: |
+          if [ ! -d "kpz" ]; then
+            echo "Cloning repository: KitaPlatzZentrale/kpz"
+            git clone git@github.com:KitaPlatzZentrale/kpz.git
+            cd kpz
+          else
+            cd kpz
+            echo "Repository KitaPlatzZentrale/kpz already exists, pulling the latest changes"
+            git pull
+          fi
+    
     - name: Checkout Code
       uses: actions/checkout@v2
 
@@ -35,13 +53,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
-          if [ ! -d "kpz" ]; then
-            git clone git@github.com:KitaPlatzZentrale/kpz.git
-            cd kpz
-          else
-            cd kpz
-            git pull
-          fi
+          cd kpz/backend
           docker-compose down
           docker-compose up -d
           docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d          
