--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -1,12 +1,13 @@
-version: '3'
+version: "3"
 
 services:
   express-typescript-docker-prod:
     image: goodbuy/kpz:prod
     environment:
       - NODE_ENV=production
+    container_name: express-typescript-docker-prod
     expose:
-      - '3001'
+      - "3001"
     ports:
-      - '3001:3000'
+      - "3001:3000"
     command: node dist/index.js
