--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -5,6 +5,8 @@ services:
     image: goodbuy/kpz:prod
     environment:
       - NODE_ENV=production
+      - S3_BUCKET=${S3_BUCKET}
+      - MONGO_DB_CONNECTION=${MONGO_DB_CONNECTION}
     container_name: express-typescript-docker-prod
     expose:
       - "3001"
