--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.1",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
