--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,27 +7,28 @@ on:
 
 jobs:
   git:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone or Pull KPZ Repo
-        uses: appleboy/ssh-action@master
-        with:
-          host: 3.70.176.52
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          script: |
-            if [ ! -d "kpz" ]; then
-              echo "Cloning repository: KitaPlatzZentrale/kpz"
-              git clone git@github.com:KitaPlatzZentrale/kpz.git
-              cd kpz
-            else
-              cd kpz
-              echo "Repository KitaPlatzZentrale/kpz already exists, pulling the latest changes"
-              git pull
-            fi
-      - name: Checkout Code
-        uses: actions/checkout@v2
+    deploy:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Clone or Pull KPZ Repo
+          uses: appleboy/ssh-action@master
+          with:
+            host: 3.70.176.52
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_PRIVATE_KEY }}
+            port: 22
+            script: |
+              if [ ! -d "kpz" ]; then
+                echo "Cloning repository: KitaPlatzZentrale/kpz"
+                git clone git@github.com:KitaPlatzZentrale/kpz.git
+                cd kpz
+              else
+                cd kpz
+                echo "Repository KitaPlatzZentrale/kpz already exists, pulling the latest changes"
+                git pull
+              fi
+        - name: Checkout Code
+          uses: actions/checkout@v2
   backend:
     deploy:
       runs-on: ubuntu-latest
