--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
             docker-compose down --remove-orphans
             docker rmi goodbuy/kpz:dev
             docker rmi goodbuy/kpz:prod
-            docker-compose up --pull -d
+            docker-compose up -d
             docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
   frontend:
     runs-on: ubuntu-latest
@@ -98,4 +98,4 @@ jobs:
             cd kpz/frontend
             docker-compose down --remove-orphans
             docker rmi goodbuy/kpz-frontend:dev
-            docker-compose up --pull -d
+            docker-compose up -d
