--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -7,6 +7,8 @@ services:
       - NODE_ENV=production
       - S3_BUCKET=${S3_BUCKET}
       - MONGO_DB_CONNECTION=${MONGO_DB_CONNECTION}
+      - AIRTABLE_BASE=${AIRTABLE_BASE}
+      - AIRTABLE_API_KEY=${AIRTABLE_API_KEY}
     container_name: express-typescript-docker-prod
     expose:
       - "3000"
