--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -5,8 +5,12 @@ services:
     image: goodbuy/kpz:prod
     environment:
       - NODE_ENV=production
+      - S3_BUCKET=${S3_BUCKET}
+      - MONGO_DB_CONNECTION=${MONGO_DB_CONNECTION}
+      - AIRTABLE_BASE=${AIRTABLE_BASE}
+      - AIRTABLE_API_KEY=${AIRTABLE_API_KEY}
     volumes:
-      - ./logs/prod:/usr/src/app/logs
+      - ~/logs/prod:/usr/src/app/logs
     container_name: express-typescript-docker-prod
     expose:
       - "3000"
