--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hook-geolocation": "^1.1.0",
     "react-router-dom": "^6.10.0",
     "react-wrap-balancer": "^0.4.0",
     "sort-by": "^1.2.0",
