Map WIP with mapbox

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,13 @@
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "localforage": "^1.10.0",
+    "mapbox-gl": "^2.14.1",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hook-geolocation": "^1.1.0",
+    "react-map-gl": "^7.0.23",
     "react-router-dom": "^6.10.0",
     "react-wrap-balancer": "^0.4.0",
     "sort-by": "^1.2.0",
