This commit should change split front and backend
... deployment by checking where the changes happened.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'backend/**'
+      - 'frontend/**'
 
 jobs:
   backend:
     runs-on: ubuntu-latest
+    if: "contains(toJSON(github.event.commits.*.modified), 'backend/')"
     steps:
       - name: Clone or Pull KPZ Repo
         uses: appleboy/ssh-action@master
@@ -61,7 +65,7 @@ jobs:
 
   frontend:
     runs-on: ubuntu-latest
-
+    if: "contains(toJSON(github.event.commits.*.modified), 'frontend/')"
     steps:
       - name: Clone or Pull KPZ Repo
         uses: appleboy/ssh-action@master
