--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  kpz_frontend_dev:
+  kpz-prod-frontend:
     environment:
       - VITE_BACKEND_URL=${VITE_BACKEND_URL}
       - VITE_PUBLIC_HERE_API_KEY=${VITE_PUBLIC_HERE_API_KEY}
@@ -10,3 +10,4 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    container_name: kpz-prod-frontend-container
