Changed the name of the frontend deployment job

--- a/.github/workflows/deploy_prod_frontend.yml
+++ b/.github/workflows/deploy_prod_frontend.yml
@@ -8,7 +8,7 @@ on:
       - 'frontend/**'
 
 jobs:
-  frontend:
+  deploy-prod-frontend:
     runs-on: ubuntu-latest
     steps:
       - name: Clone or Pull KPZ Repo
