--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       - VITE_BACKEND_URL=${VITE_BACKEND_URL}
       - VITE_PUBLIC_HERE_API_KEY=${VITE_PUBLIC_HERE_API_KEY}
-    image: goodbuy/kpz-frontend:dev
+    image: goodbuy/kpz-prod-frontend
     ports:
       - "80:80"
     volumes:
