--- a/.github/workflows/deploy_prod_frontend.yml
+++ b/.github/workflows/deploy_prod_frontend.yml
@@ -50,7 +50,7 @@ jobs:
           port: 22
           script: |
             cd kpz/frontend
-            docker-compose down --remove-orphans
-            docker rmi goodbuy/kpz-prod-frontend
+            docker-compose down --remove-orphans kpz-prod-frontend-container
             docker rm kpz-prod-frontend-container
+            docker rmi goodbuy/kpz-prod-frontend
             docker-compose up -d
