--- a/backend/docker-compose.local.yml
+++ b/backend/docker-compose.local.yml
@@ -2,4 +2,6 @@ version: "3"
 
 services:
   kpz-local-backend:
+    env_file:
+      - .env
     command: sh -c 'npm run build && node dist/index.js'
