--- a/.github/workflows/deploy_prod_backend.yml
+++ b/.github/workflows/deploy_prod_backend.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Build Docker Image Prod
+      - name: Build Docker Image Backend Prod
         working-directory: ./backend
         run: docker build -t goodbuy/kpz-prod-backend .
 
@@ -49,7 +49,7 @@ jobs:
           port: 22
           script: |
             cd kpz/backend
-            docker-compose down --remove-orphans kpz-prod-backend-container
+            docker-compose down --remove-orphans
             docker rm kpz-prod-backend-container
             docker rmi goodbuy/kpz-prod-backend
             docker-compose -f docker-compose.prod.yml up -d
