--- a/frontend/docker-compose.dev.yml
+++ b/frontend/docker-compose.dev.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   kpz-dev-frontend:
     environment:
-      - VITE_BACKEND_URL=${VITE_BACKEND_URL}
+      - VITE_BACKEND_URL=${DEV_BACKEND_URL}
       - VITE_PUBLIC_HERE_API_KEY=${VITE_PUBLIC_HERE_API_KEY}
     image: goodbuy/kpz-dev-frontend
     ports:
