--- a/.github/workflows/deploy_dev_frontend.yml
+++ b/.github/workflows/deploy_dev_frontend.yml
@@ -50,7 +50,7 @@ jobs:
           port: 22
           script: |
             cd kpz/frontend
-            docker-compose down --remove-orphans
+            docker-compose -f docker-compose.dev.yml down --remove-orphans
             docker rm kpz-dev-frontend-container
             docker rmi goodbuy/kpz-dev-frontend
             docker-compose up -d
