--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config jest.config.js --silent src/__tests__/",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "local": "npx tsc --watch & nodemon dist/index.js",
     "build": "tsc -p .",
     "fetch-kita-details": "ts-node src/scripts/iterateOverKitas.ts",
@@ -22,20 +22,17 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
+    "typescript": "^5.0.3",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.11",
     "chalk": "^5.2.0",
     "haversine-distance": "^1.2.1",
-    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "ts-node": "^10.9.1"
   },
   "engines": {
     "node": "14.20.0"
