--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-hook-geolocation": "^1.1.0",
     "react-map-gl": "^7.0.23",
     "react-router-dom": "^6.10.0",
+    "react-smooth-scroll-hook": "^1.3.4",
     "react-wrap-balancer": "^0.4.0",
     "sort-by": "^1.2.0",
     "yup": "^1.0.2"
