Removed "--remove-orphans"

--- a/.github/workflows/deploy_prod_backend.yml
+++ b/.github/workflows/deploy_prod_backend.yml
@@ -49,7 +49,7 @@ jobs:
           port: 22
           script: |
             cd kpz/backend
-            docker-compose -f docker-compose.prod.yml down --remove-orphans
+            docker-compose -f docker-compose.prod.yml down
             docker rm kpz-prod-backend-container
             docker rmi goodbuy/kpz-prod-backend
             docker-compose -f docker-compose.prod.yml up -d
