--- a/.github/workflows/deploy_dev_backend.yml
+++ b/.github/workflows/deploy_dev_backend.yml
@@ -49,7 +49,7 @@ jobs:
           port: 22
           script: |
             cd kpz/backend
-            docker-compose -f docker-compose.dev.yml down --remove-orphans
+            docker-compose -f docker-compose.dev.yml down
             docker rm kpz-dev-backend-container
             docker rmi goodbuy/kpz-dev-backend
             docker-compose -f docker-compose.dev.yml up -d
