--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,7 @@
     "docker-local": "docker-compose -f docker-compose.local.yml up -d",
     "docker-local-new-build": "docker-compose -f docker-compose.local.yml up -d --build",
     "docker-prod": "docker-compose -f docker-compose.prod.yml up -d",
-    "fetch-kita-details": "ts-node src/scripts/iterateOverKitas.ts",
-    "local": "npx tsc --watch & nodemon dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "fetch-kita-details": "ts-node src/scripts/iterateOverKitas.ts"
   },
   "author": "",
   "license": "ISC",
