--- a/.github/workflows/deploy_dev_frontend.yml
+++ b/.github/workflows/deploy_dev_frontend.yml
@@ -19,14 +19,14 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            if [ ! -d "kpz" ]; then
+            if [ ! -d "kpz_dev" ]; then
               echo "Cloning repository: KitaPlatzZentrale/kpz"
-              git clone git@github.com:KitaPlatzZentrale/kpz.git
-              cd kpz
+              git clone -b dev git@github.com:KitaPlatzZentrale/kpz.git kpz_dev
+              cd kpz_dev
             else
-              cd kpz
+              cd kpz_dev
               echo "Repository KitaPlatzZentrale/kpz already exists, pulling the latest changes"
-              git pull
+              git pull origin dev
             fi
 
       - name: Checkout Code
@@ -49,7 +49,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            cd kpz/frontend
+            cd kpz_dev/frontend
             docker-compose -f docker-compose.dev.yml down
             docker rm kpz-dev-frontend-container
             docker rmi goodbuy/kpz-dev-frontend
