--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "npm:@mui/joy@latest",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
+    "framer-motion": "^10.12.4",
     "haversine-distance": "^1.2.1",
     "localforage": "^1.10.0",
     "mapbox-gl": "^2.14.1",
@@ -30,6 +31,8 @@
     "react-map-gl": "^7.0.23",
     "react-router-dom": "^6.10.0",
     "react-smooth-scroll-hook": "^1.3.4",
+    "react-spring": "^9.7.1",
+    "react-use-gesture": "^9.1.3",
     "react-wrap-balancer": "^0.4.0",
     "sort-by": "^1.2.0",
     "yup": "^1.0.2"
