--- a/backend/package.json
+++ b/backend/package.json
@@ -18,19 +18,21 @@
   "license": "ISC",
   "dependencies": {
     "airtable": "^0.11.6",
-    "axios": "^1.3.4",
+    "aws-cdk-lib": "^2.79.1",
+    "axios": "^1.4.0",
     "class-validator": "^0.14.0",
+    "constructs": "^10.2.20",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3",
+    "mongoose": "^7.1.1",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.16.8",
     "chalk": "^5.2.0",
     "haversine-distance": "^1.2.1",
     "jest": "^29.5.0",
@@ -40,7 +42,7 @@
     "typescript": "^5.0.4"
   },
   "engines": {
-    "node": "14.20.0"
+    "node": "18"
   },
   "compilerOptions": {
     "esModuleInterop": true
