--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,14 @@
-FROM node:lts-alpine
+FROM --platform=linux/amd64 node:18
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
 
 RUN npm ci
-RUN npm install -g nodemon
 
 COPY . .
+RUN npx tsc -p .
 
-RUN npm run build
+EXPOSE 8080
+
+CMD [ "node", "dist/index.js" ]
