--- a/backend/package.json
+++ b/backend/package.json
@@ -23,12 +23,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "mongoose": "^7.0.3",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/hpp": "^0.2.2",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.15.11",
     "chalk": "^5.2.0",
