--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^9.0.1",
     "airtable": "^0.11.6",
     "axios": "^1.3.4",
     "class-validator": "^0.14.0",
@@ -27,6 +28,7 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "mongoose": "^7.0.3",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
