--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -39,10 +38,11 @@
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "uuid": "^9.0.0"
   },
   "engines": {
-    "node": "14.20.0"
+    "node": "18"
   },
   "compilerOptions": {
     "esModuleInterop": true
