--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,6 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "mongoose": "^7.0.3",
-    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -43,7 +42,8 @@
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "uuid": "^9.0.0"
   },
   "engines": {
     "node": "18.16.0"
