--- a/.github/workflows/push_to_ecr.yml
+++ b/.github/workflows/push_to_ecr.yml
@@ -8,7 +8,11 @@ on:
     paths:
       - 'backend/**'
   workflow_dispatch:
-    
+
+permissions:
+      id-token: write   # This is required for requesting the JWT
+      contents: read
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
