--- a/.github/workflows/push_to_ecr.yml
+++ b/.github/workflows/push_to_ecr.yml
@@ -11,7 +11,7 @@ on:
 
 permissions:
       id-token: write   # This is required for requesting the JWT
-      contents: read
+      contents: read    # This is required for actions/checkout
 
 jobs:
   build-and-push:
@@ -45,5 +45,5 @@ jobs:
           REPOSITORY: kpz_${{ env.DEPLOY_ENV }}_api
           IMAGE_TAG: latest
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker build -t 897331788878.dkr.ecr.eu-central-1.amazonaws.com/kpz_${{ env.DEPLOY_ENV }}_api:latest .
+          docker push 897331788878.dkr.ecr.eu-central-1.amazonaws.com/kpz_${{ env.DEPLOY_ENV }}_api:latest
