--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -33,12 +33,12 @@ jobs:
         run: yarn --cwd "frontend" install
 
       - name: Build
-        run: yarn build
+        run: yarn --cwd "frontend" build
 
       - name: Deploy
         uses: reggionick/s3-deploy@v3
         with:
-          folder: dist
+          folder: frontend/dist
           bucket: ${{ secrets.S3_BUCKET }}
           bucket-region: ${{ secrets.S3_BUCKET_REGION }}
           dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
