--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -1,5 +1,3 @@
-## GitHub Actions Workflow to push to static website S3 bucket on master branch merge
-
 name: Deploy Frontend to Production
 
 on:
@@ -10,10 +8,9 @@ on:
       - 'frontend/**'
   workflow_dispatch:
 
-
 permissions:
-    id-token: write   # This is required for requesting the JWT
-    contents: read    # This is required for actions/checkout
+  id-token: write
+  contents: read
 
 jobs:
   run:
@@ -25,19 +22,19 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-            role-to-assume: arn:aws:iam::897331788878:role/github_actions_role_v2
-            role-session-name: GitHubActionsS3
-            aws-region: eu-central-1
+          role-to-assume: arn:aws:iam::897331788878:role/github_actions_role_v2
+          role-session-name: GitHubActionsS3
+          aws-region: eu-central-1
 
       - name: Install dependencies
         run: yarn --cwd "frontend" install
 
       - name: Build
-        run: yarn --cwd "frontend" build
         env:
-          VITE_BACKEND_URL: ${{ vars.BACKEND_URL }}
+          VITE_BACKEND_URL: ${{ secrets.BACKEND_URL }}
           VITE_PUBLIC_HERE_API_KEY: ${{ secrets.VITE_PUBLIC_HERE_API_KEY }}
-          
+        run: yarn --cwd "frontend" build
+
       - name: Deploy
         uses: reggionick/s3-deploy@v3
         with:
