--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,14 @@
-FROM --platform=linux/amd64 node:18
+FROM node:18
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
 
 RUN npm ci
-RUN npm install -g nodemon
 
 COPY . .
 RUN npx tsc -p .
 
-EXPOSE 8080
+EXPOSE 3000
 
 CMD [ "node", "dist/index.js" ]
