--- a/scraper/kubernetes/cronjob.yaml
+++ b/scraper/kubernetes/cronjob.yaml
@@ -11,6 +11,9 @@ spec:
           containers:
             - name: scraper
               image: public.ecr.aws/b2z0n9v4/kpz-scraper-k8ts:latest # Replace this with the image of your scraper
+              env:
+                - name: KITA_API_URL
+                  value: "https://kita-navigator.berlin.de/api/v1/kitas"
               command: ["node"]
               args: ["index.js"]
               # Add any environment variables or other configuration needed for your scraper here
