--- a/email/package.json
+++ b/email/package.json
@@ -20,11 +20,14 @@
     "@react-email/render": "^0.0.7",
     "aws-lambda": "^1.0.7",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "react-email": "1.9.3",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.115",
-    "@types/react": "^18.2.6"
+    "@types/express": "^4.17.17",
+    "@types/react": "^18.2.17",
+    "typescript": "^5.1.6"
   }
 }
