--- a/email/package.json
+++ b/email/package.json
@@ -8,9 +8,7 @@
   "scripts": {
     "dev": "email dev",
     "export": "email export",
-    "prebuild": "rm -rf dist",
-    "build": "esbuild src/functions/* --bundle --minify --sourcemap --platform=node --target=es2020 --outdir=dist",
-    "postbuild": "cd dist && ../zipByName.sh"
+    "deploy": "./auto_deploy.sh"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.332.0",
@@ -18,6 +16,7 @@
     "@fontsource/nunito": "^4.5.12",
     "@react-email/components": "0.0.6",
     "@react-email/render": "^0.0.7",
+    "amqplib": "^0.10.3",
     "aws-lambda": "^1.0.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -25,6 +24,7 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/aws-lambda": "^8.10.115",
     "@types/express": "^4.17.17",
     "@types/react": "^18.2.17",
