--- a/notification/package.json
+++ b/notification/package.json
@@ -5,20 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild": "rm -rf dist",
-    "build": "esbuild src/functions/* --bundle --minify --sourcemap --platform=node --target=es2020 --outdir=dist",
-    "postbuild": "cd dist && ../zipByName.sh"
+    "deploy": "./auto_deploy.sh"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-sns": "^3.352.0",
+    "amqplib": "^0.10.3",
     "aws-lambda": "^1.0.7",
     "axios": "^1.4.0",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/aws-lambda": "^8.10.117",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.3.1"
   }
 }
