--- a/scraper/kubernetes/cronjob.yaml
+++ b/scraper/kubernetes/cronjob.yaml
@@ -10,7 +10,7 @@ spec:
         spec:
           containers:
             - name: scraper
-              image: public.ecr.aws/b2z0n9v4/kpz-scraper-k8ts:latest # Replace this with the image of your scraper
+              image: public.ecr.aws/b2z0n9v4/kpz-scraper-k8ts:v1.0 # Replace this with the image of your scraper
               env:
                 - name: KITA_API_URL
                   value: "https://kita-navigator.berlin.de/api/v1/kitas"
